--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,13 +1,8 @@
-<%- include('includes/head') -%>
+<%- include('includes/head') %>
 
-<section class="container">
-    <h1>Lorem Ipsum</h1>
-    <form action="/" method="post">
-        <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-        <label>Cliente:</label>
-        <input type="text" name="cliente">
-        <button type="submit">Enviar</button>
-    </form>
-</section>
 
-<%- include('includes/footer') -%>
+    <h1>Hello, world!</h1>
+
+   
+
+<%- include('includes/footer') %>
