--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,7 +1,30 @@
 <%- include('includes/head') %>
+<%- include('includes/navbar') %>
 
+<div class="container">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-10 my-3">
+        <h1 class="text-center">Agenda</h1>
+        <p class="text-center lead">Sua lista de contatos está abaixo</p>
 
-    <h1>Hello, world!</h1>
+        <div class="row">
+            <div class="col my-3">
+                <div class="alert alert-danger">Um erro qualquer</div>
+            </div>
+        </div>
+        <div class="responsive-table">
+            <table class="table my-3">
+                <tr>
+                    <td>Daniel</td>
+                    <td>Bombonate</td>
+                    <td>116655225444</td>
+                    <td>daniel.bombonate@agenda.com</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div class="col-lg-2"></div>
+</div>
 
    
 
