--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="pt_BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERRO 404</title>
-</head>
-<body>
-    <h1>ERRO 404</h1>
-</body>
-</html>
+<%- include('includes/head') %>
+<%- include('includes/navbar') %>
+
+<div class="container">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-10 my-5">
+        <h1 class="display-1 text-center">Erro 404</h1>
+        <p class="text-center lead">A página que você procura não existe.</p>
+    </div>
+    <div class="col-lg-2"></div>
+</div>
+
+   
+
+<%- include('includes/footer') %>
