--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,11 +1,13 @@
-<%- include('includes/head') %>
-<%- include('includes/navbar') %>
+<%- include('includes/head'); %>
+<%- include('includes/navbar'); %>
 
 <div class="container">
     <div class="col-lg-2"></div>
     <div class="col-lg-10 my-3">
         <h1 class="text-center">Login</h1>
         <p class="text-center lead">Crie sua conta ou faça login para acessar</p>
+
+        <%- include('includes/messages'); %>
 
         <div class="row">
 
