--- a/src/views/includes/navbar.ejs
+++ b/src/views/includes/navbar.ejs
@@ -16,7 +16,7 @@
         <% if (user){ %>
         
           <li class="nav-item">
-              <a class="nav-link" href="/contato">Cadastrar Contato</a>
+              <a class="nav-link" href="/contato/index">Cadastrar Contato</a>
           </li>
 
           <li class="nav-item">
