--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,9 +4,10 @@
 <div class="container">
     <div class="col-lg-2"></div>
     <div class="col-lg-10 my-3">
+
         <h1 class="text-center">Agenda</h1>
         <p class="text-center lead">Sua lista de contatos está abaixo</p>
-
+        <%- include('includes/messages'); %>
         <div class="responsive-table">
             <table class="table my-3">
                 <tr>
