--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -7,7 +7,11 @@
         <h1 class="text-center">Contatos</h1>
         <p class="text-center lead">Crie ou edite seus contatos:</p>
         <%- include('includes/messages'); %>
+        <% if(contato._id) {%>
+        <form action='/contato/edit/<%= contato._id%>' method="POST">
+        <% } else {%>
         <form action='/contato/register' method="POST">
+        <% } %>
             <input type="hidden" name="_csrf" value="<%- csrfToken %>">
             <div class="form-group">
                 <label>Nome:</label>
