Leitura dos contatos na index e Exclusão

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,17 +6,25 @@
     <div class="col-lg-10 my-3">
 
         <h1 class="text-center">Agenda</h1>
+        <% if(contatos.length > 0) {%>
         <p class="text-center lead">Sua lista de contatos está abaixo</p>
         <%- include('includes/messages'); %>
         <div class="responsive-table">
             <table class="table my-3">
+            <% contatos.forEach(contato => { %>
                 <tr>
-                    <td>Daniel</td>
-                    <td>Bombonate</td>
-                    <td>116655225444</td>
-                    <td>daniel.bombonate@agenda.com</td>
+                    <td><%= contato.nome %></td>
+                    <td><%= contato.sobrenome %></td>
+                    <td><%= contato.telefone %></td>
+                    <td><%= contato.email %></td>
+                    <td><a href="/contato/index/<%= contato._id %>" class="">Editar</a></td>
+                    <td><a class="text-danger" href="/contato/delete/<%= contato._id %>">Excluir</a></td>
                 </tr>
+            <% }) %>
             </table>
+            <% } else { %>
+                <p class="text-center lead">Você não tem contatos cadastrados.</p>
+            <% } %>
         </div>
     </div>
     <div class="col-lg-2"></div>
