adicionado endereco + melorias de exibicao

--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -29,6 +29,10 @@
                 <label>Telefone:</label>
                 <input value = "<%= contato.telefone %>"" type="tel" class="form-control" name="telefone">
             </div>
+            <div class="form-group">
+                <label>Endereço:</label>
+                <input value = "<%= contato.endereco %>"" type="text" class="form-control" name="endereco">
+            </div>
             <button type="submit" class="btn btn-primary">Salvar</button>
         </form>
 
