--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -10,12 +10,12 @@
         <% if(contato._id) {%>
         <form action='/contato/edit/<%= contato._id%>' method="POST">
         <% } else {%>
-        <form action='/contato/register' method="POST">
+        <form class='form-contato' action='/contato/register' method="POST">
         <% } %>
             <input type="hidden" name="_csrf" value="<%- csrfToken %>">
             <div class="form-group">
                 <label>Nome:</label>
-                <input value = "<%= contato.nome %>"" type="text" class="form-control" name="nome">
+                <input value = "<%= contato.nome %>"" type="text" class="form-control" name="nome" required>
             </div>
             <div class="form-group">
                 <label>Sobrenome:</label>
