validações de campos Contato

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,6 +11,13 @@
         <%- include('includes/messages'); %>
         <div class="responsive-table">
             <table class="table my-3">
+                    <th>Nome</th>
+                    <th>Sobrenome</th>
+                    <th>Tel/Cel</th>
+                    <th>Email</th>
+                    <th>Endereço</th>
+                    <th></th>
+                    <th></th>
             <% contatos.forEach(contato => { %>
                 <tr>
                     <td><%= contato.nome %></td>
