--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -8,7 +8,7 @@
         <p class="text-center lead">Crie ou edite seus contatos:</p>
         <%- include('includes/messages'); %>
         <% if(contato._id) {%>
-        <form action='/contato/edit/<%= contato._id%>' method="POST">
+        <form class='form-contato' action='/contato/edit/<%= contato._id%>' method="POST">
         <% } else {%>
         <form class='form-contato' action='/contato/register' method="POST">
         <% } %>
