melhorias na validação dos forms

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,15 +9,15 @@
         <% if(contatos.length > 0) {%>
         <p class="text-center lead">Sua lista de contatos está abaixo</p>
         <%- include('includes/messages'); %>
-        <div class="responsive-table">
-            <table class="table my-3">
-                    <th>Nome</th>
-                    <th>Sobrenome</th>
-                    <th>Tel/Cel</th>
-                    <th>Email</th>
-                    <th>Endereço</th>
-                    <th></th>
-                    <th></th>
+        <div class="responsive-table-sm">
+            <table class="table table-hover my-3">
+                <th>Nome</th>
+                <th>Sobrenome</th>
+                <th>Tel/Cel</th>
+                <th>Email</th>
+                <th>Endereço</th>
+                <th></th>
+                <th></th>
             <% contatos.forEach(contato => { %>
                 <tr>
                     <td><%= contato.nome %></td>
